--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -339,6 +339,7 @@ jobs:
           bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
           ls hardwario-macos-installer/macOS-x64/target/pkg/
           mv hardwario-macos-installer/macOS-x64/target/pkg/hardwario-code-macos-${{env.TAG}}.pkg hio-code-${{env.TAG}}-macos.pkg
+          pkgutil --check-signature hio-code-${{env.TAG}}-macos.pkg
 
       - name: Publish the extension
         uses: softprops/action-gh-release@v0.1.5
