--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -278,86 +278,87 @@ jobs:
           latest: true
           fileName: "*.vsix"
         
-      - run: mv *.vsix hardwario-tower.vsix
-        
-      - name: Download Visual Studio Code and data folder
-        run: gdown --folder 1Lb6Ulpk-yXRd-UpaU8DvYJUFpf_XDkg1 
-                
-      - name: Unzip all downloaded files
-        run: | 
-          mkdir hardwario-code
-          unzip macOS/hardwario-code-macos.zip
-          unzip macOS/data.zip -d hardwario-code/
-          xattr -dr com.apple.quarantine Visual\ Studio\ Code.app
-          mv Visual\ Studio\ Code.app hardwario-code/Visual\ Studio\ Code.app
-          chmod -R 777 hardwario-code/
-          ls hardwario-code
-
-      - name: Install all extensions
-        run: |
-          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension cschlosser.doxdocgen
-          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension marus25.cortex-debug
-          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension ms-vscode.cpptools
-          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension ms-vscode.cpptools-themes
-          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension twxs.cmake
-          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension hardwario-tower.vsix
-
-      - name: Prepare macOS Installer
-        run: | 
-          git clone https://github.com/SmejkalJakub/hardwario-macos-installer.git
-          mv hardwario-code/Visual\ Studio\ Code.app hardwario-macos-installer/macOS-x64/application/Visual\ Studio\ Code.app
-          mv hardwario-code/code-portable-data hardwario-macos-installer/macOS-x64/application/code-portable-data
-          ls hardwario-macos-installer/macOS-x64/application/
-
-      - name: Setup env
-        run: echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
-
-      - name: Install the Apple certificate and provisioning profile
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          # create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-
-          # import certificate and provisioning profile from secrets
-          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
-
-          # create temporary keychain
-          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-          # import certificate to keychain
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-
-          # apply provisioning profile
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-
-      - name: Run macOS Installer
-        run: | 
-          bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
-          ls hardwario-macos-installer/macOS-x64/target/pkg-signed/
-          mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg hio-code-${{env.TAG}}-macos.pkg
-          pkgutil --check-signature hio-code-${{env.TAG}}-macos.pkg
-          xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username $APP_EMAIL --password $APP_SPECIFIC_PASSWORD --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
-
-      - name: Publish the extension
-        uses: softprops/action-gh-release@v0.1.5
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          files: hio-code-${{env.TAG}}-macos.pkg
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: hardwario-code-macos
-          path: hio-code-${{env.TAG}}-macos.pkg
+      - run: xcrun altool --notarization-info bebd5197-cfee-4db8-a542-8a45a84a8564 --username $APP_EMAIL --password $APP_SPECIFIC_PASSWORD
+#      - run: mv *.vsix hardwario-tower.vsix
+#        
+#      - name: Download Visual Studio Code and data folder
+#        run: gdown --folder 1Lb6Ulpk-yXRd-UpaU8DvYJUFpf_XDkg1 
+#                
+#      - name: Unzip all downloaded files
+#        run: | 
+#          mkdir hardwario-code
+#          unzip macOS/hardwario-code-macos.zip
+#          unzip macOS/data.zip -d hardwario-code/
+#          xattr -dr com.apple.quarantine Visual\ Studio\ Code.app
+#          mv Visual\ Studio\ Code.app hardwario-code/Visual\ Studio\ Code.app
+#          chmod -R 777 hardwario-code/
+#          ls hardwario-code
+#
+#      - name: Install all extensions
+#        run: |
+#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension cschlosser.doxdocgen
+#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension marus25.cortex-debug
+#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension ms-vscode.cpptools
+#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension ms-vscode.cpptools-themes
+#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension twxs.cmake
+#          ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension hardwario-tower.vsix
+#
+#      - name: Prepare macOS Installer
+#        run: | 
+#          git clone https://github.com/SmejkalJakub/hardwario-macos-installer.git
+#          mv hardwario-code/Visual\ Studio\ Code.app hardwario-macos-installer/macOS-x64/application/Visual\ Studio\ Code.app
+#          mv hardwario-code/code-portable-data hardwario-macos-installer/macOS-x64/application/code-portable-data
+#          ls hardwario-macos-installer/macOS-x64/application/
+#
+#      - name: Setup env
+#        run: echo "TAG=${{env.VERSION}}" >> "$GITHUB_ENV"
+#
+#      - name: Install the Apple certificate and provisioning profile
+#        env:
+#          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
+#          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+#          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
+#          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+#        run: |
+#          # create variables
+#          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+#          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+#          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+#
+#          # import certificate and provisioning profile from secrets
+#          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+#          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
+#
+#          # create temporary keychain
+#          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+#          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+#          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+#
+#          # import certificate to keychain
+#          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+#          security list-keychain -d user -s $KEYCHAIN_PATH
+#
+#          # apply provisioning profile
+#          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+#          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+#
+#      - name: Run macOS Installer
+#        run: | 
+#          bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
+#          ls hardwario-macos-installer/macOS-x64/target/pkg-signed/
+#          mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg hio-code-${{env.TAG}}-macos.pkg
+#          pkgutil --check-signature hio-code-${{env.TAG}}-macos.pkg
+#          xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username $APP_EMAIL --password $APP_SPECIFIC_PASSWORD --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
+#
+#      - name: Publish the extension
+#        uses: softprops/action-gh-release@v0.1.5
+#        env:
+#          GITHUB_TOKEN: ${{ github.token }}
+#        with:
+#          files: hio-code-${{env.TAG}}-macos.pkg
+#
+#      - name: Upload Artifact
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: hardwario-code-macos
+#          path: hio-code-${{env.TAG}}-macos.pkg
