--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -348,7 +348,7 @@ jobs:
           bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
           ls hardwario-macos-installer/macOS-x64/target/pkg/
           mv hardwario-macos-installer/macOS-x64/target/pkg/hardwario-code-macos-${{env.TAG}}.pkg hio-code-${{env.TAG}}-macos.pkg
-          codesign --deep --force --verify --timestamp --verbose --sign --keychain ${{env.KEYCHAIN_PATH_GLOBAL}} "Developer ID Installer: HARDWARIO s.r.o. (C32QFQ68V9)" --options runtime hio-code-${{env.TAG}}-macos.pkg
+          codesign --deep --force --verify --timestamp --verbose --sign "Developer ID Installer: HARDWARIO s.r.o. (C32QFQ68V9)" --keychain ${{env.KEYCHAIN_PATH_GLOBAL}} --options runtime hio-code-${{env.TAG}}-macos.pkg
           pkgutil --check-signature hio-code-${{env.TAG}}-macos.pkg
           xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username $APP_EMAIL --password $APP_SPECIFIC_PASSWORD --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
 
