--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -341,7 +341,7 @@ jobs:
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
-          codesign --deep --force --verify --timestamp --verbose --sign "Developer ID Installer: HARDWARIO s.r.o. (C32QFQ68V9)" --options runtime ./hardwario-code
+          codesign --deep --force --verify --timestamp --verbose --sign "HARDWARIO s.r.o." --options runtime ./hardwario-code
 
       - run: security find-identity -v
 
