--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -350,7 +350,7 @@ jobs:
           MACOS_CERTIFICATE: ${{ secrets.MACOS_CERTIFICATE }}
           MACOS_CERTIFICATE_PWD: ${{ secrets.MACOS_CERTIFICATE_PWD }}
         run: |
-          echo $BUILD_CERTIFICATE_BASE64 | base64 —decode > certificate.p12
+          echo $BUILD_CERTIFICATE_BASE64 | base64 --decode > certificate.p12
           security create-keychain -p $KEYCHAIN_PASSWORD build.keychain
           security default-keychain -s build.keychain
           security unlock-keychain -p $KEYCHAIN_PASSWORD build.keychain
