--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -350,6 +350,9 @@ jobs:
           MACOS_CERTIFICATE: ${{ secrets.MACOS_CERTIFICATE }}
           MACOS_CERTIFICATE_PWD: ${{ secrets.MACOS_CERTIFICATE_PWD }}
         run: |
+          security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
+          security delete-keychain $RUNNER_TEMP/build.keychain
+          rm ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision
           echo $BUILD_CERTIFICATE_BASE64 | base64 --decode > certificate.p12
           security create-keychain -p $KEYCHAIN_PASSWORD build.keychain
           security default-keychain -s build.keychain
