--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -361,16 +361,15 @@ jobs:
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k $KEYCHAIN_PASSWORD build.keychain
           security find-identity -v
           security find-identity -p codesigning
-          /usr/bin/codesign --deep --force --verify --timestamp --verbose --keychain build.keychain --sign C32QFQ68V9 --options runtime ./hardwario-code
-
 
       - name: Run macOS Installer
         run: | 
           echo ${{env.KEYCHAIN_PATH_GLOBAL}}
           bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
           ls hardwario-macos-installer/macOS-x64/target/pkg-signed/
-          mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg hio-code-${{env.TAG}}-macos.pkg
+          mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
           pkgutil --check-signature hio-code-${{env.TAG}}-macos.pkg
+          codesign --deep --force --verify --timestamp --verbose --keychain build.keychain --sign C32QFQ68V9 --options runtime ./hardwario-code
           xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username $APP_EMAIL --password $APP_SPECIFIC_PASSWORD --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
 
       - name: Publish the extension
