--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -369,7 +369,7 @@ jobs:
           ls hardwario-macos-installer/macOS-x64/target/pkg-signed/
           mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
           pkgutil --check-signature hio-code-${{env.TAG}}-macos.pkg
-          codesign --deep --force --verify --timestamp --verbose --keychain build.keychain --sign C32QFQ68V9 --options runtime ./hardwario-code
+          codesign --deep --force --verify --timestamp --verbose --keychain build.keychain --sign C32QFQ68V9 --options runtime "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
           xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username $APP_EMAIL --password $APP_SPECIFIC_PASSWORD --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
 
       - name: Publish the extension
