--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -368,12 +368,13 @@ jobs:
           bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
           ls hardwario-macos-installer/macOS-x64/target/pkg-signed/
           mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
-          codesign --deep --force --verify --timestamp --verbose --keychain build.keychain --sign C32QFQ68V9 --options runtime "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
+          echo "moved"
           echo "signed"
           pkgutil --check-signature "hio-code-${{env.TAG}}-macos.pkg"
           echo "notarizing"
           xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username $APP_EMAIL --password $APP_SPECIFIC_PASSWORD --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
 
+#          codesign --deep --force --verify --timestamp --verbose --keychain build.keychain --sign C32QFQ68V9 --options runtime "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
       - name: Publish the extension
         uses: softprops/action-gh-release@v0.1.5
         env:
