--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -367,8 +367,11 @@ jobs:
           echo ${{env.KEYCHAIN_PATH_GLOBAL}}
           find . -perm +111 -type f -or -type l -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
           find . -name "*.so" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
+          echo "jsem tu"
           bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code ${{env.TAG}}
+          echo "vyrobeno"
           ls hardwario-macos-installer/macOS-x64/target/pkg-signed/
+          echo "ls"
           mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-${{env.TAG}}.pkg "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
           echo "moved"
           echo "signed"
