--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,8 +90,8 @@ jobs:
           call hardwario-code/bin/code.cmd --install-extension ms-vscode.cpptools-themes
           call hardwario-code/bin/code.cmd --install-extension twxs.cmake
           call hardwario-code/bin/code.cmd --install-extension HARDWARIO.hardwario-tower
-          del hardwario-code/data/extensions/.init-default-profile-extensions
-          del hardwario-code/data/extensions/extensions.json
+          del hardwario-code\data\extensions\.init-default-profile-extensions
+          del hardwario-code\data\extensions\extensions.json
 
       - name: Setup env
         shell: bash
