--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -325,7 +325,7 @@ jobs:
           bash hardwario-macos-installer/macOS-x64/build-macos-x64.sh hardwario-code v0.0.1
           mv hardwario-macos-installer/macOS-x64/target/pkg-signed/hardwario-code-macos-v0.0.1.pkg "${{ github.workspace }}/hio-code-v0.0.1-macos.pkg"
 
-#          xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username "$APP_EMAIL" --password "$APP_SPECIFIC_PASSWORD" --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
+          xcrun altool --notarize-app --primary-bundle-id "com.hardwario.code" --username "$APP_EMAIL" --password "$APP_SPECIFIC_PASSWORD" --file "${{ github.workspace }}/hio-code-${{env.TAG}}-macos.pkg"
       
       - name: Publish the extension
         uses: softprops/action-gh-release@v1
