--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -311,6 +311,7 @@ jobs:
           security find-identity -v
           security find-identity -p codesigning
 
+          sudo codesign --force --verify --timestamp --deep --verbose --sign C32QFQ68V9 --options runtime hardwario-macos-installer/macOS-x64/application/code-portable-data
 
 #          find . -perm +111 -type f -or -type l -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
 #          find . -name "arm-*" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
