--- a/macOS/code-portable-data/user-data/User/settings.json
+++ b/macOS/code-portable-data/user-data/User/settings.json
@@ -1,5 +1,4 @@
 {
     "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}HARDWARIO Code",
-    "extensions.ignoreRecommendations": true,
-    "workbench.startupEditor": "none",
+    "extensions.ignoreRecommendations": true
 }
