--- a/macOS/code-portable-data/user-data/User/settings.json
+++ b/macOS/code-portable-data/user-data/User/settings.json
@@ -1,4 +1,5 @@
 {
     "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}HARDWARIO Code",
-    "extensions.ignoreRecommendations": true
+    "extensions.ignoreRecommendations": true,
+    "workbench.startupEditor": "none"
 }
