--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -262,10 +262,6 @@ jobs:
           ./hardwario-code/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code --install-extension HARDWARIO.hardwario-tower
           rm -rf hardwario-code/code-portable-data/.init-default-profile-extensions
           rm -rf hardwario-code/code-portable-data/extensions.json
-          mv hardwario-code/Visual\ Studio\ Code.app hardwario-code/HARDWARIO\ Code.app
-          mv hardwario-code "HARDWARIO Code"
-          zip -r hardwario-code.zip "HARDWARIO Code"
-
 
 #      - name: Prepare macOS Installer
 #        run: | 
@@ -315,12 +311,12 @@ jobs:
 #          security find-identity -v
 #          security find-identity -p codesigning
 #
-#          find . -perm +111 -type f -or -type l -execdir sudo codesign --force --verify --timestamp --verbose --sign "HARDWARIO s.r.o." --options runtime {} \;
-#          find . -name "arm-*" -execdir sudo codesign --force --verify --timestamp --verbose --sign "HARDWARIO s.r.o." --options runtime {} \;
-#          find . -name "*.so" -execdir sudo codesign --force --verify --timestamp --verbose --sign "HARDWARIO s.r.o." --options runtime {} \;
-#          find . -name "*.dylib" -execdir sudo codesign --force --verify --timestamp --verbose --sign "HARDWARIO s.r.o." --options runtime {} \;
-#          find . -name "*.node" -execdir sudo codesign --force --verify --timestamp --verbose --sign "HARDWARIO s.r.o." --options runtime {} \;
-#          find . -name "*.o" -execdir sudo codesign --force --verify --timestamp --verbose --sign "HARDWARIO s.r.o." --options runtime {} \;
+#          find . -perm +111 -type f -or -type l -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
+#          find . -name "arm-*" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
+#          find . -name "*.so" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
+#          find . -name "*.dylib" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
+#          find . -name "*.node" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
+#          find . -name "*.o" -execdir sudo codesign --force --verify --timestamp --verbose --sign C32QFQ68V9 --options runtime {} \;
 #          bash sign.sh
 #
 #      - name: Run macOS Installer
